# learnrack

./: .replit  README.md  manage.py  pyproject.toml  requirements.txt
courses/: models.py  views.py
courses/migrations/: 0001_initial.py  0002_course_channel_name.py  0003_course_tag.py  0004_remove_course_tag.py  0005_alter_course_notes.py
learnrack/: asgi.py  decorators.py  index.html  settings.py  style.css  urls.py  views.py  wsgi.py
templates/: base.html  course_detail.html  course_notes.html  css.html  dashboard.html  new_course.html  redirect.html  vid.html  video.html
